# xurl-rs

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FEATURE_PARITY.md  KNOWN_DIFFERENCES.md  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASES.md  RELEASING.md  cliff.toml  deny.toml  rust-toolchain.toml
.github/rulesets/: protect-dev.json  protect-main.json
.github/workflows/: ci.yml  finalize-release.yml  guard-main-docs.yml  guard-main-provenance.yml  guard-release-branch.yml  release.yml
Formula/: xurl-rs.rb  xurl.rb
benches/: benchmark.sh
completions/: _xr  _xurl  xr.bash  xr.elv  xr.elvish  xr.fish  xr.powershell  xr.ps1  xr.zsh  xurl.bash  xurl.fish
docs/brainstorms/: 2026-03-16-initial-release-brainstorm.md  2026-03-17-install-completions-brainstorm.md  2026-03-21-api-mock-tests-requirements.md  2026-03-21-typed-responses-requirements.md  2026-04-03-library-ergonomics-requirements.md
docs/plans/: 2026-03-14-feat-xurl-rs-port-plan.md  2026-03-16-001-feat-v1.0.3-initial-release-plan.md  2026-03-18-001-ci-unified-release-pipeline-plan.md  2026-03-20-001-refactor-completions-flag-to-subcommand-plan.md  2026-03-20-002-refactor-migrate-ci-to-centralized-reusable-workflows-plan.md  2026-03-26-001-feat-remote-oauth2-flow-plan.md  2026-04-02-001-feat-typed-api-response-structs-plan.md  2026-04-03-001-feat-library-ergonomics-plan.md
docs/solutions/: branch-reset-file-inventory.md
docs/solutions/rust-patterns/: rust-cli-port-methodology.md
docs/todos/: add-github-rulesets.md
scaffold/: Cargo.toml  translation-report.json
scaffold/src/: lib.rs  main.rs
scaffold/src/api/: client.rs  endpoints.rs  execute.rs  media.rs  mod.rs  shortcuts.rs
scaffold/src/auth/: auth.rs  listener.rs  mod.rs
scaffold/src/cli/: auth.rs  media.rs  mod.rs  picker.rs  root.rs  shortcuts.rs  version.rs  webhook.rs
scaffold/src/config/: config.rs
scaffold/src/errors/: errors.rs
scaffold/src/store/: tokens.rs
scaffold/src/utils/: utils.rs
scaffold/src/version/: version.rs
scripts/: update-types.sh
scripts/hooks/: pre-push
src/: error.rs  lib.rs  main.rs  output.rs
src/api/: endpoints.rs  media.rs  mod.rs  request.rs  response.rs  shortcuts.rs
src/api/response/: mod.rs  types.rs
src/auth/: callback.rs  mod.rs  oauth1.rs  oauth2.rs  pending.rs
src/cli/: exit_codes.rs  mod.rs
src/cli/commands/: auth.rs  media.rs  mod.rs  schema.rs  streaming.rs
src/config/: mod.rs
src/store/: migration.rs  mod.rs  tokens.rs  types.rs
tests/: agentic_tests.rs  api_tests.rs  auth_pending_tests.rs  auth_remote_tests.rs  auth_tests.rs  cli_tests.rs  completion_tests.rs  config_tests.rs  conformance_runner.rs  error_tests.rs  oauth1_tests.rs  schema_tests.rs  spec_validation.rs  store_tests.rs  wiring_tests.rs
tests/conformance/: mod.rs  normalize.rs  test_cases.toml
tests/fixtures/openapi/: example_responses.json
