[package]
name = "xurl"
version = "0.1.0"
edition = "2024"
# Transpiled from Go 1.24.0

[dependencies]
anyhow = "1"
inquire = "0.7"
console = "0.15"
colored = "2"
clap = { version = "4", features = ["derive"] }
# TODO: map Go dep github.com/stretchr/testify to Rust crate
colored_json = "4"
ngrok = "0.14"
oauth2 = "4"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
